; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_name-lookup.c_namespace_scope_ht_size.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_name-lookup.c_namespace_scope_ht_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@std_identifier = common dso_local global i64 0, align 8
@NAMESPACE_STD_HT_SIZE = common dso_local global i64 0, align 8
@global_scope_name = common dso_local global i64 0, align 8
@GLOBAL_SCOPE_HT_SIZE = common dso_local global i64 0, align 8
@NAMESPACE_ORDINARY_HT_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @namespace_scope_ht_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @namespace_scope_ht_size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @DECL_NAME(i64 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @std_identifier, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* @NAMESPACE_STD_HT_SIZE, align 8
  br label %21

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @global_scope_name, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i64, i64* @GLOBAL_SCOPE_HT_SIZE, align 8
  br label %19

17:                                               ; preds = %11
  %18 = load i64, i64* @NAMESPACE_ORDINARY_HT_SIZE, align 8
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i64 [ %16, %15 ], [ %18, %17 ]
  br label %21

21:                                               ; preds = %19, %9
  %22 = phi i64 [ %10, %9 ], [ %20, %19 ]
  ret i64 %22
}

declare dso_local i64 @DECL_NAME(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
